crates/alder-parse/src/item/snapshots/alder_parse__item__fn___tests__error_body.snap
---
source: crates/alder-parse/src/item/fn_.rs
description: "fn f() { let }"
---
Body(
    Stmt(
        Let(
            Pattern(
                Start(
                    1,
                    14,
                ),
                1,
                14,
            ),
            1,
            10,
        ),
        1,
        10,
    ),
    1,
    8,
)
