crates/alder-parse/src/item/snapshots/alder_parse__item__fn___tests__error_body_unclosed.snap
---
source: crates/alder-parse/src/item/fn_.rs
description: "fn f() { 1"
---
Body(
    End(
        ExpectedEnd {
            opening: Position {
                line: 1,
                column: 8,
            },
            boundary: Position {
                line: 1,
                column: 11,
            },
            unexpected: Position {
                line: 1,
                column: 11,
            },
        },
    ),
    1,
    8,
)
