crates/alder-parse/src/item/snapshots/alder_parse__item__fn___tests__error_name_reserved.snap
---
source: crates/alder-parse/src/item/fn_.rs
description: "fn for() { 1 }"
---
Name(
    1,
    4,
)
