crates/alder-parse/src/item/snapshots/alder_parse__item__fn___tests__error_no_name.snap
---
source: crates/alder-parse/src/item/fn_.rs
description: "fn (a) { a }"
---
Name(
    1,
    4,
)
