crates/alder-parse/src/item/snapshots/alder_parse__item__fn___tests__error_params_end.snap
---
source: crates/alder-parse/src/item/fn_.rs
description: (a b)
---
End(
    ExpectedEnd {
        opening: Position {
            line: 1,
            column: 1,
        },
        boundary: Position {
            line: 1,
            column: 3,
        },
        unexpected: Position {
            line: 1,
            column: 4,
        },
    },
)
