crates/alder-parse/src/item/snapshots/alder_parse__item__fn___tests__error_params_missing.snap
---
source: crates/alder-parse/src/item/fn_.rs
description: "fn add { 1 }"
---
Params(
    Open(
        1,
        8,
    ),
    1,
    8,
)
