crates/alder-parse/src/item/snapshots/alder_parse__item__fn___tests__error_params_reserved.snap
---
source: crates/alder-parse/src/item/fn_.rs
description: (type)
---
Pattern(
    Reserved(
        Type,
        1,
        2,
    ),
    1,
    2,
)
