crates/alder-parse/src/item/snapshots/alder_parse__item__fn___tests__error_params_type.snap
---
source: crates/alder-parse/src/item/fn_.rs
description: "(a: )"
---
Type(
    Start(
        1,
        5,
    ),
    1,
    5,
)
