crates/alder-parse/src/item/snapshots/alder_parse__item__fn___tests__error_params_unclosed.snap
---
source: crates/alder-parse/src/item/fn_.rs
description: "fn add(a, b { a }"
---
Params(
    End(
        ExpectedEnd {
            opening: Position {
                line: 1,
                column: 7,
            },
            boundary: Position {
                line: 1,
                column: 12,
            },
            unexpected: Position {
                line: 1,
                column: 13,
            },
        },
    ),
    1,
    7,
)
