crates/alder-parse/src/item/snapshots/alder_parse__item__fn___tests__error_ret.snap
---
source: crates/alder-parse/src/item/fn_.rs
description: "fn add() -> { 1 }"
---
Ret(
    Record(
        Field(
            1,
            15,
        ),
        1,
        13,
    ),
    1,
    13,
)
